--- a/css/nav.css
+++ b/css/nav.css
@@ -1,24 +1,27 @@
 /*##################################*/
 /*NAV*/
 /*##################################*/
-#nav{
+/* #nav{
     display: flex;
     align-content: center;
     justify-content: center;
     height: 60px;
-    /* margin: auto; */
-    /* border: rgb(0, 255, 128) 2px solid; */
-  }
+    margin: auto; 
+     border: rgb(0, 255, 128) 2px solid;
+  }*/
   .nav{
     grid-area:nav;
+    width: 100%;
 
-  }
+}
 
   .nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-  }
+    text-align: center;
+
+}
 
   .nav a {
     color: #d0cfc5
@@ -30,4 +33,45 @@
   .nav ul li {
     display: inline-block;
     padding: 20px 20px 0 0;
+    text-align: center;
   }
+  .toggle{
+    width: 100%;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    text-align: right;
+    font-size:30px;
+    display: none;
+    
+
+  }
+  
+  @media(max-width:700px){
+    .toggle{
+      display: block;
+
+    }
+    .nav ul li {
+      display: block;
+      text-align: center;
+      /* padding: 20px 20px 0 0; */
+      transition: transform .25s ease-in-out;
+    /*250mstransitiontopage*/-webkit-transition: -webkit-transform .25s ease-in-out;
+    -webkit-transition: transform .25s ease-in-out;
+    -moz-transition: transform .25s ease-in-out;
+    -ms-transition: transform .25s ease-in-out;
+    -o-transition: transform .25s ease-in-out;
+    }
+
+    .nav ul {
+      display: none;
+
+    }
+    .nav.active ul{
+    display: block;
+    
+}
+      
+
+  }
+
