--- a/css/nav.css
+++ b/css/nav.css
@@ -12,7 +12,16 @@
   .nav{
     grid-area:nav;
     width: 100%;
-
+    position:fixed;
+    top:0;
+    background: radial-gradient(50% 50%, #30393f,#38444c );
+    border-radius:50px ;
+    -webkit-border-radius:50px ;
+    -moz-border-radius:50px ;
+    -ms-border-radius:50px ;
+    -o-border-radius:50px ;
+    /* opacity: 0.8; */
+    
 }
 
   .nav ul {
@@ -42,28 +51,34 @@
     text-align: right;
     font-size:30px;
     display: none;
-    
 
-  }
+}
   
   @media(max-width:700px){
     .toggle{
       display: block;
-
     }
+
+    .nav{
+      position:-webkit-sticky;
+      position:sticky;
+      top:0;
+      background: radial-gradient(50% 50%, #30393f,#38444c );
+      border-radius:50px ;
+      -webkit-border-radius:50px ;
+      -moz-border-radius:50px ;
+      -ms-border-radius:50px ;
+      -o-border-radius:50px ;
+      opacity: 0.6;
+  }
+  
     .nav ul li {
       display: block;
       text-align: center;
-      /* padding: 20px 20px 0 0; */
-      transition: transform .25s ease-in-out;
-    /*250mstransitiontopage*/-webkit-transition: -webkit-transform .25s ease-in-out;
-    -webkit-transition: transform .25s ease-in-out;
-    -moz-transition: transform .25s ease-in-out;
-    -ms-transition: transform .25s ease-in-out;
-    -o-transition: transform .25s ease-in-out;
     }
 
     .nav ul {
+
       display: none;
 
     }
@@ -75,3 +90,4 @@
 
   }
 
+ 
