--- a/css/lp.css
+++ b/css/lp.css
@@ -35,7 +35,7 @@ h2,h1,h3{
 
   .container{
     display: grid;
-    width: 90vw;
+    width: 100%;
     height: 100%;
     margin: auto;
     grid-gap: 1rem;
@@ -76,7 +76,7 @@ h2,h1,h3{
     flex-flow: column;
     align-content: center;
     justify-content: center;
-    height: 600px;
+    padding: 5vh;
     
     /* border: rgb(0, 255, 128) 2px solid; */
   }
@@ -102,7 +102,6 @@ h2,h1,h3{
 }
 
   .hero_img img{
-
     background-size: cover;
     background-repeat:no-repeat;
     margin: auto;
@@ -124,44 +123,118 @@ h2,h1,h3{
 
 
 /*##################################*/
-/*HERO*/
+/*profit*/
 /*##################################*/
 
 #profit_section{
     grid-area:prof;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column;
     justify-content: space-around;
     align-content: center;
     /* border: orange 2px solid; */
 }
 
+#profit_section p{
+  text-align: left;
+}
+
 
 /*##################################*/
-/*HERO*/
+/*audit*/
 /*##################################*/
 
 #audit_section{
     grid-area:aud;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column;
     justify-content: space-around;
     align-content: center;
     /* border: orange 2px solid; */
 }
 
-
+#audit_section  p{
+  text-align: left;
+}
 /*##################################*/
-/*HERO*/
+/*implement*/
 /*##################################*/
 
 #implement_section{
     grid-area:imp;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column;
     justify-content: space-around;
     align-content: center;
     /* border: orange 2px solid; */
 }
 
+#implement_section p{
+  text-align: left;
+}
 
+
+@media(min-width:900px){
+  .container{
+    display: grid;
+    width: 100%;
+    margin: auto;
+    grid-gap: 1rem;
+    /* grid-template-rows: 60px 45vh 45vh 45vh 45vh; */
+    /* grid-auto-rows: minmax(400px, auto); */
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-areas: "nav nav nav nav nav nav nav nav nav nav nav nav"
+                        "hero hero hero hero hero hero hero hero hero hero hero hero"
+                        "prof prof prof prof prof prof prof prof prof prof prof prof"
+                         "aud aud aud aud aud aud aud aud aud aud aud aud"
+                         "imp imp imp imp imp imp imp imp imp imp imp imp"
+                         "footer footer footer footer footer footer footer footer footer footer footer footer";
+    justify-content: center;
+    /* border: red 2px solid; */
+  }
+
+
+  .hero_txt{
+    margin-left: 45px;
+    text-align: left;
+    width:580px;
+    
+}
+#hero_section{
+  justify-content:start ;
+  height: 400px;
+  /* border: orange 2px solid; */
+}
+
+.hero_img img{
+  max-height:380px;
+}
+
+.group_profit_rev{
+  display: flex;
+  flex-flow: row-reverse wrap;
+  padding: 20px;
+}
+
+.group_profit_rev p {
+  max-width: 480px;
+  }
+.group_profit{
+  display: flex;
+  flex-flow: row wrap;
+  padding: 20px;
+}
+.group_profit p {
+max-width: 480px;
+}
+
+.prof_img img{
+  position: relative;
+  width: 96%;
+  width: 300px;
+  max-height: 200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+}
