--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ h2,h1,h3{
 
   .container{
     display: grid;
-    width: 90vw;
+    width: 100%;
     height: 100%;
     margin: auto;
     grid-gap: 1rem;
@@ -72,6 +72,7 @@ h2,h1,h3{
 /*sections*/
 /*##################################*/
   .section{
+    padding: 5vh;
     display: flex;
     flex-flow: column;
     align-content: center;
@@ -395,7 +396,6 @@ h2,h1,h3{
 }
 .blog-txt{
   flex: 1;
-
   text-align: left;
   width:480px;
 
